# fastqr

./: .gitignore  Cargo.toml  README.md  SECURITY.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml  playground-pages.yml
crates/fastqr_core/: Cargo.toml
crates/fastqr_core/src/: bit_buffer.rs  bit_grid.rs  decode.rs  encode.rs  error.rs  gf256.rs  lib.rs  reed_solomon.rs  tables.rs  types.rs
crates/fastqr_image/: Cargo.toml
crates/fastqr_image/benches/: decode.rs
crates/fastqr_image/src/: binary.rs  decode.rs  detect.rs  format.rs  lib.rs  render.rs  tests.rs
crates/fastqr_napi/: Cargo.toml
crates/fastqr_napi/src/: lib.rs
crates/fastqr_tui/: Cargo.toml
crates/fastqr_tui/src/: lib.rs  main.rs
crates/fastqr_wasm/: Cargo.toml
crates/fastqr_wasm/src/: lib.rs
examples/: README.md
examples/browser_demo/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
examples/browser_demo/src/: main.ts
examples/rust_basic/: Cargo.toml  README.md
examples/rust_basic/src/: main.rs
examples/sh/: README.md  batch_render.sh  quick_start.sh
examples/ts_basic/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
examples/ts_basic/src/: main.ts  style.css
examples/vue_basic/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
examples/vue_basic/src/: App.vue  style.css
npm/fastqr/: README.md  browser.d.ts  browser.js  node.d.ts  node.js  package.json  vite.config.ts
npm/fastqr/scripts/: build-browser-artifact.mjs  build-node-artifact.mjs  check-package-artifacts.mjs
npm/fastqr_vue/: README.md  package.json  tsconfig.json  vite.config.ts
npm/fastqr_vue/scripts/: check-package-artifacts.mjs
npm/fastqr_vue/src/: fastqr_canvas.ts  index.ts  shared.ts  use_fastqr.ts  use_fastqr_camera.ts  use_fastqr_canvas.ts  use_fastqr_decode.ts
playground/: index.html  package.json  tsconfig.json  vite.config.ts
playground/src/: App.vue  main.ts  style.css
playground/src/playground/: CameraPanel.vue  DecodePanel.vue  GeneratorPanel.vue  PlaygroundHero.vue  PreviewPanel.vue  playground.css  playground.ts  playground_state.ts  usePlaygroundState.ts
