[package]
name = "fastqr-core"
description = "Core QR encoding, decoding, masking, and Reed-Solomon primitives for fastqr"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
compact_str.workspace = true
smallvec.workspace = true
