[package]
name = "fastqr-image"
description = "Raster rendering and image decoding support for fastqr QR codes"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
fastqr-core = { path = "../fastqr_core", version = "0.1.0" }
image.workspace = true
smallvec.workspace = true
