[package]
name = "fastqr-napi"
description = "N-API bindings for fastqr Node.js QR workflows"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
fastqr-core = { path = "../fastqr_core", version = "0.1.0" }
fastqr-image = { path = "../fastqr_image", version = "0.1.0" }
napi.workspace = true
napi-derive.workspace = true

[build-dependencies]
napi-build.workspace = true
