[package]
name = "fastqr-tui"
description = "Command-line and terminal rendering interface for fastqr"
autobins = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "fastqr"
path = "src/main.rs"

[dependencies]
fastqr-core = { path = "../fastqr_core", version = "0.1.0" }
fastqr-image = { path = "../fastqr_image", version = "0.1.0" }
