[package]
name = "fastqr-wasm"
description = "WebAssembly bindings for fastqr browser QR workflows"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
fastqr-core = { path = "../fastqr_core", version = "0.1.0" }
fastqr-image = { path = "../fastqr_image", version = "0.1.0" }
js-sys.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
